Made scroll bar always visible to avoid slight horizontal shift

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,3 +1,6 @@
+html {
+    overflow-y: scroll;
+}
 ::-webkit-scrollbar {
     max-width: 3vw;
 }
